test/bad/bad.undefined-type.sam
// ERROR_COUNT: 2
// undefined-type.sam:6:5-6:36: [NotWellDefinedIdentifier]: `HelloWorld` is not well defined.
// undefined-type.sam:6:35-6:36: [UnexpectedType]: Expected: `HelloWorld`, actual: `int`.

class Main {
    function main(): HelloWorld = 1
}
